# Rtype

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  install.bat  install.sh
Config/Assets/: RTypePresentation.gif_
client/: CMakeLists.txt
client/include/: UDPClient.hpp  main.hpp
client/include/game/UI/: GameUI.hpp  ShootBar.hpp
client/include/game/levels/: Level_1.hpp
client/include/game/menus/: EndingScreen.hpp  GameOverScreen.hpp  PauseMenu.hpp  PauseMenuOptions.hpp  TransitionScreen.hpp
client/include/menus/: BeginingScreen.hpp  LoadingScreen.hpp
client/include/menus/MainMenu/: ColorPlayerPopup.hpp  Credits.hpp  MainMenu.hpp  MainMenuEasterEgg.hpp  MainMenuOptions.hpp
client/include/menus/MultiplayerMenu/: ConnectionPopup.hpp  MultiplayerConfigMenu.hpp  MultiplayerRoomMenu.hpp  RoomInfoComponent.hpp
client/include/menus/MultiplayerWaitingRoom/: MultiplayerWaitingRoom.hpp  SlotInfoComponent.hpp
client/include/utilities/: ACustomSprite.hpp  AnimatedSprite.hpp  CustomButton.hpp  CustomCheckBox.hpp  CustomRect.hpp  CustomSlider.hpp  CustomText.hpp  GlobalUtils.hpp  InputBox.hpp  RandomNumbers.hpp  StaticSprite.hpp
client/include/utilities/backgrounds/: AsteroidsGenerator.hpp  BackgroundSpaceGenerator.hpp  PlanetsGenerator.hpp
client/include/utilities/keyboard/: VirtualKeyboard.hpp  VirtualKeys.hpp
client/src/: UDPClient.cpp  main.cpp
client/src/game/UI/: GameUI.cpp  ShootBar.cpp
client/src/game/levels/: Level_1.cpp
client/src/game/menus/: EndingScreen.cpp  GameOverScreen.cpp  PauseMenu.cpp  PauseMenuOptions.cpp  TransitionScreen.cpp
client/src/menus/: BeginingScreen.cpp  LoadingScreen.cpp
client/src/menus/MainMenu/: ColorPlayerPopup.cpp  Credits.cpp  MainMenu.cpp  MainMenuEasterEgg.cpp  MainMenuOptions.cpp
client/src/menus/MultiplayerMenu/: ConnectionPopup.cpp  MultiplayerConfigMenu.cpp  MultiplayerRoomMenu.cpp  RoomInfoComponent.cpp
client/src/menus/MultiplayerWaitingRoom/: MultiplayerWaitingRoom.cpp  SlotInfoComponent.cpp
client/src/utilities/: AnimatedSprite.cpp  CustomButton.cpp  CustomCheckBox.cpp  CustomRect.cpp  CustomSlider.cpp  CustomText.cpp  InputBox.cpp  RandomNumbers.cpp  StaticSprite.cpp
client/src/utilities/backgrounds/: AsteroidsGenerator.cpp  BackgroundSpaceGenerator.cpp  PlanetsGenerator.cpp
client/src/utilities/keyboard/: VirtualKeyboard.cpp  VirtualKeys.cpp
cmake/: Findboost.cmake  Findraylib.cmake
components/include/Action/: ACommand.hpp  InputHandler.hpp  MoveDownCommand.hpp  MoveLeftCommand.hpp  MoveRightCommand.hpp  MoveUpCommand.hpp  ShootCommand.hpp  TestCommand.hpp
components/include/Action/Pattern/: ActorPattern.hpp  CircularPattern.hpp  QuickLeftPattern.hpp  RandomPattern.hpp  SinusoidalPattern.hpp  ZigZagPattern.hpp
components/include/Actor/: Actor.hpp  Asteroid.hpp  BossDobkeratops.hpp  Breed.hpp  Missile.hpp  MissileBoss.hpp  Monster.hpp  Player.hpp
components/include/PowerUp/Actions/: APowerUpAction.hpp  PowerUpActionFactory.hpp  TripleShootAction.hpp
components/include/PowerUp/Items/: APowerUpItem.hpp  TripleShootItem.hpp
components/include/Scene/: AGameState.hpp  APlayerMovementComponent.hpp
components/src/Action/: InputHandler.cpp  MoveDownCommand.cpp  MoveLeftCommand.cpp  MoveRightCommand.cpp  MoveUpCommand.cpp  ShootCommand.cpp  TestCommand.cpp
components/src/Action/Pattern/: CircularPattern.cpp  QuickLeftPattern.cpp  RandomPattern.cpp  SinusoidalPattern.cpp  ZigZagPattern.cpp
components/src/Actor/: Asteroid.cpp  BossDobkeratops.cpp  Breed.cpp  Missile.cpp  MissileBoss.cpp  Monster.cpp  Player.cpp
components/src/PowerUp/Actions/: PowerUpActionFactory.cpp  TripleShootAction.cpp
components/src/PowerUp/Items/: TripleShootItem.cpp
data/: backgrounds.json
data/level_1/: enemies.json  level.json
data/level_2/: enemies.json  level.json
data/level_3/: enemies.json  level.json
engine/: .gitignore
engine/include/engine/: Engine.hpp  Exemple.hpp  Time.hpp
engine/include/settings/: Errors.hpp  Music.hpp  Options.hpp
engine/include/utilities/: CustomSound.hpp  DataStruct.hpp  GameDatas.hpp
engine/src/engine/: Engine.cpp  Exemple.cpp  Time.cpp
engine/src/settings/: Errors.cpp  Music.cpp  Options.cpp
engine/src/utilities/: CustomSound.cpp  GameDatas.cpp
server/: CMakeLists.txt
server/include/: Client.hpp  Game.hpp  Room.hpp  UDPServer.hpp
server/src/: Client.cpp  Game.cpp  Room.cpp  UDPServer.cpp  main.cpp
